StoreIntegrationTest - 회원가입 , 매장 생성, 테스트 코드 구현